Verif/Test/Invalide/test_erreur_3.58-3.deca
// Description:
//	   test règle 3.58 
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'int' et 'boolean' sont incompatibles avec l'opérateur 'instanceof' (règle 3.58)
// 
// Attributs: exec incorrect automatique
//
// Historique:
//    cree le 20/01/2012

boolean b;
{
   b = 1 instanceof boolean;
}